Fix render sync being called while the player was still being built